# spotify-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  spotify_mcp_server.py
spotify_mcp/: __init__.py  __main__.py  auth.py  client.py  config.py  server.py
